# weather_station_v2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
issues/: build_error.md  debug_error.md
source/: main.c
source/modules/wifi/header/: scan_wifi.h
source/modules/wifi/source/: scan_wifi.c
source_code/: CMakeLists.txt  main.c  main.h
source_code/misc/: CMakeLists.txt
source_code/misc/include/: return_types.h
source_code/modules/: CMakeLists.txt
source_code/modules/wifi/: CMakeLists.txt  scan_wifi.c  scan_wifi.h  wifi_manager.c  wifi_manager.h
